--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.7.2",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "immer": "^10.0.2",
     "jquery": "^3.7.0",
