--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react-router-dom": "^6.14.2",
     "react-thunk": "^1.0.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/toastr": "^2.1.40",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
