--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-thunk": "^1.0.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "toastr": "^2.1.4"
