--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-thunk": "^1.0.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "toastr": "^2.1.4"
   },
